Fazendo pequenos ajustes