@@ -1,234 +1,314 @@
 package br.edu.cs.poo.ac.bolsa.negocio;
-
-import java.math.BigDecimal;
-import java.time.LocalDate;
-
-import br.edu.cs.poo.ac.bolsa.dao.DAOInvestidorEmpresa;
-import br.edu.cs.poo.ac.bolsa.dao.DAOInvestidorPessoa;
 import br.edu.cs.poo.ac.bolsa.entidade.Contatos;
 import br.edu.cs.poo.ac.bolsa.entidade.Endereco;
 import br.edu.cs.poo.ac.bolsa.entidade.FaixaRenda;
 import br.edu.cs.poo.ac.bolsa.entidade.InvestidorEmpresa;
 import br.edu.cs.poo.ac.bolsa.entidade.InvestidorPessoa;
+
+import java.time.LocalDate;
+import java.util.regex.Pattern;
+
+import br.edu.cs.poo.ac.bolsa.dao.DAOInvestidorEmpresa;
+import br.edu.cs.poo.ac.bolsa.dao.DAOInvestidorPessoa;
 import br.edu.cs.poo.ac.bolsa.util.MensagensValidacao;
+import br.edu.cs.poo.ac.bolsa.util.ResultadoValidacao;
 import br.edu.cs.poo.ac.bolsa.util.ValidadorCpfCnpj;
 
 public class InvestidorMediator {
+	private static final Pattern EMAIL_PATTERN =
+		    Pattern.compile("^[A-Za-z0-9+_.-]+@(.+)$");
+	private DAOInvestidorEmpresa daoInvEmp = new DAOInvestidorEmpresa ();
+	private DAOInvestidorPessoa daoInvPes = new DAOInvestidorPessoa();
+	
+	private MensagensValidacao validarEndereco(Endereco endereco) {
+		MensagensValidacao msgs = new MensagensValidacao();
+		
+		if (endereco.getLogradouro() == null || endereco.getLogradouro().isBlank()) {
+			msgs.adicionar("Logradouro é obrigatório.");
+			return msgs;
+		}
+		
+		if (endereco.getNumero() == null || endereco.getNumero().isBlank()) {
+			msgs.adicionar("Número é obrigatório.");
+		}
+		
+		if (endereco.getPais() == null || endereco.getPais().isBlank()) {
+			msgs.adicionar("País é obrigatório.");
+		}
+		
+		if (endereco.getEstado() == null || endereco.getEstado().isBlank()) {
+			msgs.adicionar("Estado é obrigatório.");
+		}
+		
+		if (endereco.getCidade() == null || endereco.getCidade().isBlank()) {
+			msgs.adicionar("Cidade é obrigatório.");
+		}
+		
+		return msgs;
+	}
+	
+	private MensagensValidacao validarContatos(Contatos contatos, boolean ehPessoaJuridica) {
+	    MensagensValidacao msgs = new MensagensValidacao();
+	    
+	    if (contatos == null) {
+	        msgs.adicionar("Contatos nao pode ser nulo.");
+	        return msgs;
+	    }
+	    
+	    String fixo = contatos.getTelefoneFixo();
+	    String celular = contatos.getTelefoneCelular();
+	    String whatsapp = contatos.getNumeroWhatsApp();
 
-    private DAOInvestidorEmpresa daoInvEmp = new DAOInvestidorEmpresa();
-    private DAOInvestidorPessoa daoInvPes = new DAOInvestidorPessoa();
+	    boolean temContato = false;
 
-    private MensagensValidacao validarEndereco(Endereco endereco) {
-        MensagensValidacao msgs = new MensagensValidacao();
-        
-        if (endereco.getLogradouro() == null || endereco.getLogradouro().trim().isEmpty()) {
-            msgs.adicionar("Logradouro é obrigatório.");
-        }
-        if (endereco.getNumero() == null || endereco.getNumero().trim().isEmpty()) {
-            msgs.adicionar("Número é obrigatório.");
-        }
-        if (endereco.getPais() == null || endereco.getPais().trim().isEmpty()) {
-            msgs.adicionar("País é obrigatório.");
-        }
-        if (endereco.getEstado() == null || endereco.getEstado().trim().isEmpty()) {
-            msgs.adicionar("Estado é obrigatório.");
-        }
-        if (endereco.getCidade() == null || endereco.getCidade().trim().isEmpty()) {
-            msgs.adicionar("Cidade é obrigatório.");
-        }
-        return msgs;
-    }
+	    if (fixo != null && !fixo.isBlank()) {
+	        temContato = true;
+	        if (!fixo.matches("\\d+")) {
+	            msgs.adicionar("Telefone fixo deve conter apenas números");
+	        }
+	    }
 
-    private MensagensValidacao validarContatos(Contatos contatos, boolean ehPessoaJuridica) {
-        MensagensValidacao msgs = new MensagensValidacao();
+	    if (celular != null && !celular.isBlank()) {
+	        temContato = true;
+	        if (!celular.matches("\\d+")) {
+	            msgs.adicionar("Telefone celular deve conter apenas números.");
+	        }
+	    }
 
-        if (contatos.getEmail() == null || contatos.getEmail().trim().isEmpty() || 
-            !contatos.getEmail().contains("@") || !contatos.getEmail().contains(".")) {
-            msgs.adicionar("E-mail inválido.");
-        }
+	    if (whatsapp != null && !whatsapp.isBlank()) {
+	        temContato = true;
+	        if (!whatsapp.matches("\\d+")) {
+	            msgs.adicionar("WhatsApp deve conter apenas números");
+	        }
+	    }
 
-        boolean temFixo = contatos.getTelefoneFixo() != null && !contatos.getTelefoneFixo().trim().isEmpty();
-        boolean temCelular = contatos.getTelefoneCelular() != null && !contatos.getTelefoneCelular().trim().isEmpty();
-        boolean temWhats = contatos.getNumeroWhatsApp() != null && !contatos.getNumeroWhatsApp().trim().isEmpty();
+	    if (!temContato) {
+	        msgs.adicionar("Pelo menos um telefone deve ser informado.");
+	    }
 
-        if (!temFixo && !temCelular && !temWhats) {
-            msgs.adicionar("Pelo menos um telefone deve ser informado.");
-        }
+	    if (contatos.getEmail() == null || contatos.getEmail().isBlank()) {
+	        msgs.adicionar("Email deve ser diferente de null e/ou branco.");
+	    } else {
+	        boolean r = EMAIL_PATTERN.matcher(contatos.getEmail()).matches();
+	        if (!r) {
+	            msgs.adicionar("E-mail inválido.");
+	        }
+	    }
 
-        if (temFixo && !contatos.getTelefoneFixo().matches("[0-9]+")) {
-            msgs.adicionar("Telefone fixo deve conter apenas números.");
-        }
-        if (temCelular && !contatos.getTelefoneCelular().matches("[0-9]+")) {
-            msgs.adicionar("Telefone celular deve conter apenas números.");
-        }
-        if (temWhats && !contatos.getNumeroWhatsApp().matches("[0-9]+")) {
-            msgs.adicionar("WhatsApp deve conter apenas números.");
-        }
+	    if (ehPessoaJuridica) {
+	        if (contatos.getNomeParaContato() == null || contatos.getNomeParaContato().isBlank()) {
+	            msgs.adicionar("Nome para contato é obrigatório para pessoa jurídica.");
+	        }
+	    }
+	    
+	    return msgs;
+	}
+	
+	private MensagensValidacao validar(DadosInvestidor dadosInv) { 
+		MensagensValidacao msgs = new MensagensValidacao();
+		
+		if (dadosInv == null) {
+			msgs.adicionar("Dados investidor deve ser diferente de null.");
+			return msgs;
+		}
+		
+		if (dadosInv.getNome() == null || dadosInv.getNome().isBlank()) {
+			msgs.adicionar("Nome deve ser diferente de null e de brancos.");
+		}
+		
+		if (dadosInv.getEndereco() == null) {
+			msgs.adicionar("Endereco deve ser diferente de null.");
+		}
+		
+		LocalDate hoje = LocalDate.now();
+		
+		if (dadosInv.getDataCriacao() == null) {
+			msgs.adicionar("Data de criacao deve ser diferente de null.");
+		} else {
+			if (dadosInv.getDataCriacao().isAfter(hoje)) {
+				msgs.adicionar("Data de criacao deve ser menor ou igual à data atual.");
+			}
+		}
+		
+		if (dadosInv.getBonus() == null) {
+			msgs.adicionar("Bonus deve ser diferente de null.");
+		} else {
+			if (dadosInv.getBonus().signum() == -1) {
+				msgs.adicionar("Bonus deve ser maior ou igual a 0.");
+			}
+		}
+		
+		if (dadosInv.getContatos() == null) {
+			msgs.adicionar("Contatos deve ser diferente de null.");
+		} else {
+			msgs.adicionar(validarContatos(dadosInv.getContatos(), dadosInv.ehInvestidorEmpresa()));
+		}
+		
+		if (dadosInv.getEndereco() != null) {
+			msgs.adicionar(validarEndereco(dadosInv.getEndereco()));
+		} 
+		
+		return msgs;
+	}
+	
+	private MensagensValidacao validarInvestidorEmpresa(InvestidorEmpresa ie) {
+		MensagensValidacao msgs = new MensagensValidacao();
+		
+		if (ie == null) {
+			msgs.adicionar("Investidor empresa nao pode ser nulo.");
+			return msgs;
+		}
+		
+		DadosInvestidor di = new DadosInvestidor(ie, null);
+		
+		msgs.adicionar(validar(di));
+		
+		ResultadoValidacao resultado = ValidadorCpfCnpj.validarCnpj(ie.getCnpj());
+		
+		if (resultado != null) {
+			    msgs.adicionar(resultado.getMensagem());
+		}
+		
+		if (ie.getFaturamento() < 100000.0) {
+			msgs.adicionar("Faturamento tem que ser maior ou igual a 100000.0.");
+		}
+	
+		return msgs;
+	}
+	
+	private MensagensValidacao validarInvestidorPessoa(InvestidorPessoa ip) {
+		MensagensValidacao msgs = new MensagensValidacao();
+		
+		if (ip == null) {
+			msgs.adicionar("Investidor pessoa nao pode ser nulo.");
+			return msgs;
+		}
+		
+		DadosInvestidor di = new DadosInvestidor(null, ip);
+		
+		msgs.adicionar(validar(di));
+		
+		ResultadoValidacao resultado = ValidadorCpfCnpj.validarCpf(ip.getCpf());
+		
+		if (resultado != null) {
+			msgs.adicionar(resultado.getMensagem());
+		}
+		
+		if (ip.getRenda() < 10000.0) {
+			msgs.adicionar("Renda tem que ser maior ou igual a 10000.0.");
+		} else if (ip.getRenda() <= 50000.00) {
+			ip.setFaixaRenda(FaixaRenda.REGULAR);
+		} else if (ip.getRenda() <= 300000.00) {
+			ip.setFaixaRenda(FaixaRenda.DIFERENCIADA);
+		} else if (ip.getRenda() <= 100000000.00) {
+			ip.setFaixaRenda(FaixaRenda.PREMIUM);
+		}
+		
+		return msgs;
+	}
+	
+	public MensagensValidacao incluirInvestidorEmpresa(InvestidorEmpresa ie) {
+		MensagensValidacao msgs = validarInvestidorEmpresa(ie);
+		
+		if (msgs.estaVazio() == true) {
+			if (!daoInvEmp.incluirInvestidorEmpresa(ie)) {
+				msgs.adicionar("Investidor Empresa já existente.");
+			}
+		}
+		
+		return msgs;
+	}
+	
+	public MensagensValidacao alterarInvestidorEmpresa(InvestidorEmpresa ie) {
+		MensagensValidacao msgs = validarInvestidorEmpresa(ie);
+		
+		if (msgs.estaVazio() == true) {
+			if (!daoInvEmp.alterarInvestidorEmpresa(ie)) {
+				msgs.adicionar("Investidor Empresa não existente.");
+			}
+		}
+		
+		return msgs;
+	}
+	
+	public MensagensValidacao excluirInvestidorEmpresa(String cnpj) {
+		MensagensValidacao msgs = new MensagensValidacao();
+		
+		ResultadoValidacao resultado = ValidadorCpfCnpj.validarCnpj(cnpj);
 
-        if (ehPessoaJuridica && (contatos.getNomeParaContato() == null || contatos.getNomeParaContato().trim().isEmpty())) {
-            msgs.adicionar("Nome para contato é obrigatório para pessoa jurídica.");
-        }
-
-        return msgs;
-    }
-
-    private MensagensValidacao validar(DadosInvestidor dadosInv, boolean isPJ) {
-        MensagensValidacao msgs = new MensagensValidacao();
-
-        if (dadosInv == null) {
-            msgs.adicionar("Dados do investidor não podem ser nulos.");
-            return msgs;
-        }
-
-        if (dadosInv.getNome() == null || dadosInv.getNome().trim().isEmpty()) {
-            msgs.adicionar("Nome é obrigatório.");
-        }
-
-        if (dadosInv.getDataCriacao() == null || dadosInv.getDataCriacao().isAfter(LocalDate.now())) {
-            msgs.adicionar("Data de criação é obrigatória e não pode ser no futuro.");
-        }
-
-        if (dadosInv.getBonus() == null || dadosInv.getBonus().compareTo(BigDecimal.ZERO) < 0) {
-            msgs.adicionar("Bônus é obrigatório e deve ser maior ou igual a zero.");
-        }
-
-        if (dadosInv.getEndereco() == null) {
-            msgs.adicionar("Endereço é obrigatório.");
-        } else {
-            MensagensValidacao msgsEnd = validarEndereco(dadosInv.getEndereco());
-            for (String m : msgsEnd.getMensagens()) { msgs.adicionar(m); }
-        }
-
-        if (dadosInv.getContatos() == null) {
-            msgs.adicionar("Contatos são obrigatórios.");
-        } else {
-            MensagensValidacao msgsCont = validarContatos(dadosInv.getContatos(), isPJ);
-            for (String m : msgsCont.getMensagens()) { msgs.adicionar(m); }
-        }
-
-        return msgs;
-    }
-
-    private MensagensValidacao validarInvestidorEmpresa(InvestidorEmpresa ie) {
-        DadosInvestidor dadosInv = new DadosInvestidor(ie, null);
-        MensagensValidacao msgs = validar(dadosInv, true);
-
-        if (ValidadorCpfCnpj.validarCnpj(ie.getCnpj()) != null) {
-            msgs.adicionar("CNPJ inválido."); 
-        }
-
-        if (ie.getFaturamento() < 100000.0) {
-            msgs.adicionar("O faturamento deve ser maior ou igual a 100000.0.");
-        }
-
-        return msgs;
-    }
-
-    private MensagensValidacao validarInvestidorPessoa(InvestidorPessoa ip) {
-        DadosInvestidor dadosInv = new DadosInvestidor(null, ip);
-        
-        MensagensValidacao msgs = validar(dadosInv, false);
-
-        if (ValidadorCpfCnpj.validarCpf(ip.getCpf()) != null) {
-            msgs.adicionar("CPF inválido."); 
-        }
-
-        if (ip.getRenda() < 10000.0) {
-            msgs.adicionar("A renda deve ser maior ou igual a 10000.0.");
-        } else {
-            if (ip.getRenda() <= 50000.00) {
-                ip.setFaixaRenda(FaixaRenda.REGULAR);
-            } else if (ip.getRenda() <= 300000.00) {
-                ip.setFaixaRenda(FaixaRenda.DIFERENCIADA);
-            } else {
-                ip.setFaixaRenda(FaixaRenda.PREMIUM);
-            }
-        }
-
-        return msgs;
-    }
-
-    public MensagensValidacao incluirInvestidorEmpresa(InvestidorEmpresa ie) {
-        MensagensValidacao msgs = validarInvestidorEmpresa(ie);
-        if (msgs.estaVazio()) {
-            if (!daoInvEmp.incluir(ie)) {
-                msgs.adicionar("Investidor Empresa já existente.");
-            }
-        }
-        return msgs;
-    }
-
-    public MensagensValidacao alterarInvestidorEmpresa(InvestidorEmpresa ie) {
-        MensagensValidacao msgs = validarInvestidorEmpresa(ie);
-        if (msgs.estaVazio()) {
-            if (!daoInvEmp.alterar(ie)) {
-                msgs.adicionar("Investidor Empresa não existente.");
-            }
-        }
-        return msgs;
-    }
-
-    public MensagensValidacao excluirInvestidorEmpresa(String cnpj) {
-        MensagensValidacao msgs = new MensagensValidacao();
-        
-        if (ValidadorCpfCnpj.validarCnpj(cnpj) != null) {
-            msgs.adicionar("CNPJ inválido para exclusão.");
-        }
-
-        if (msgs.estaVazio()) {
-            if (!daoInvEmp.excluir(cnpj)) {
-                msgs.adicionar("Investidor Empresa não existente.");
-            }
-        }
-        return msgs;
-    }
-
-    public InvestidorEmpresa buscarInvestidorEmpresa(String cnpj) {
-        if (ValidadorCpfCnpj.validarCnpj(cnpj) != null) {
-            return null;
-        }
-        return daoInvEmp.buscar(cnpj);
-    }
-
-    public MensagensValidacao incluirInvestidorPessoa(InvestidorPessoa ip) {
-        MensagensValidacao msgs = validarInvestidorPessoa(ip);
-        if (msgs.estaVazio()) {
-            if (!daoInvPes.incluir(ip)) {
-                msgs.adicionar("Investidor Pessoa já existente.");
-            }
-        }
-        return msgs;
-    }
-
-    public MensagensValidacao alterarInvestidorPessoa(InvestidorPessoa ip) {
-        MensagensValidacao msgs = validarInvestidorPessoa(ip);
-        if (msgs.estaVazio()) {
-            if (!daoInvPes.alterar(ip)) {
-                msgs.adicionar("Investidor Pessoa não existente.");
-            }
-        }
-        return msgs;
-    }
-
-    public MensagensValidacao excluirInvestidorPessoa(String cpf) {
-        MensagensValidacao msgs = new MensagensValidacao();
-        
-        if (ValidadorCpfCnpj.validarCpf(cpf) != null) {
-            msgs.adicionar("CPF inválido para exclusão.");
-        }
-
-        if (msgs.estaVazio()) {
-            if (!daoInvPes.excluir(cpf)) {
-                msgs.adicionar("Investidor Pessoa não existente.");
-            }
-        }
-        return msgs;
-    }
-
-    public InvestidorPessoa buscarInvestidorPessoa(String cpf) {
-        if (ValidadorCpfCnpj.validarCpf(cpf) != null) {
-            return null;
-        }
-        return daoInvPes.buscar(cpf);
-    }
+		if (resultado != null) {
+			msgs.adicionar("Cnpj invalido");
+			    return null;
+			}
+		
+		if (msgs.estaVazio() == true) {
+			if (!daoInvEmp.excluirInvestidorEmpresa(cnpj)) {
+				msgs.adicionar("Investidor Empresa não existente.");
+			}
+		}
+		
+		return msgs;
+	}
+	
+	public InvestidorEmpresa buscarInvestidorEmpresa(String cnpj) {
+		ResultadoValidacao resultado = ValidadorCpfCnpj.validarCnpj(cnpj);
+		
+		if (resultado != null) {
+			    return null;
+			}
+		
+		return daoInvEmp.buscarInvestidorEmpresa(cnpj);
+	}
+	
+	public MensagensValidacao incluirInvestidorPessoa(InvestidorPessoa ip) {
+		MensagensValidacao msgs = validarInvestidorPessoa(ip);
+		
+		if (msgs.estaVazio() == true) {
+			if (!daoInvPes.incluirInvestidorPessoa(ip)) {
+				msgs.adicionar("Investidor Pessoa já existente.");
+			}
+		}
+		
+		return msgs;
+	}
+	
+	public MensagensValidacao alterarInvestidorPessoa(InvestidorPessoa ip) {
+		MensagensValidacao msgs = validarInvestidorPessoa(ip);
+		
+		if (msgs.estaVazio() == true) {
+			if (!daoInvPes.alterarInvestidorPessoa(ip)) {
+				msgs.adicionar("Investidor Pessoa não existente.");
+			}
+		}
+		
+		return msgs;
+	}
+	
+	public MensagensValidacao excluirInvestidorPessoa(String cpf) {
+		MensagensValidacao msgs = new MensagensValidacao();
+		
+		ResultadoValidacao resultado = ValidadorCpfCnpj.validarCpf(cpf);
+		
+		if (resultado != null) {
+			    msgs.adicionar(resultado.getMensagem());
+			}
+		
+		if (msgs.estaVazio() == true) {
+			if (!daoInvPes.excluirInvestidorPessoa(cpf)) {
+				msgs.adicionar("Investidor Pessoa não existente.");
+			}
+		}
+		
+		return msgs;
+	}
+	
+	public InvestidorPessoa buscarInvestidorPessoa(String cpf) {
+		ResultadoValidacao resultado = ValidadorCpfCnpj.validarCpf(cpf);
+		
+		if (resultado != null) {
+		        return null;
+		    }
+		
+		return daoInvPes.buscarInvestidorPessoa(cpf);
+	}
 }
